y.output
Nonterminals useless in grammar

   enum_specifier
   enumerator_list
   enumerator


Terminals unused in grammar

   ERROR_tok


Rules useless in grammar

  217 enum_specifier: ENUM_tok OPEN_BRACE_tok enumerator_list CLOSE_BRACE_tok
  218               | ENUM_tok identifier OPEN_BRACE_tok enumerator_list CLOSE_BRACE_tok
  219               | ENUM_tok identifier

  220 enumerator_list: enumerator
  221                | enumerator_list COMMA_tok enumerator

  222 enumerator: identifier
  223           | identifier EQUAL_tok constant_expression


State 334 conflicts: 1 shift/reduce


Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_declaration
    2                 | translation_unit external_declaration

    3 external_declaration: function_definition
    4                     | declaration

    5 function_definition: declarator compound_statement
    6                    | declarator declaration_list compound_statement
    7                    | declaration_specifiers declarator compound_statement
    8                    | declaration_specifiers declarator declaration_list compound_statement

    9 declaration: declaration_specifiers SEMI_tok
   10            | declaration_specifiers init_declarator_list SEMI_tok

   11 declaration_list: declaration
   12                 | declaration_list declaration

   13 declaration_specifiers: storage_class_specifier
   14                       | storage_class_specifier declaration_specifiers
   15                       | type_specifier
   16                       | type_specifier declaration_specifiers
   17                       | type_qualifier
   18                       | type_qualifier declaration_specifiers

   19 storage_class_specifier: AUTO_tok
   20                        | REGISTER_tok
   21                        | STATIC_tok
   22                        | EXTERN_tok
   23                        | TYPEDEF_tok

   24 type_specifier: VOID_tok
   25               | CHAR_tok
   26               | SHORT_tok
   27               | INT_tok
   28               | LONG_tok
   29               | FLOAT_tok
   30               | DOUBLE_tok
   31               | SIGNED_tok
   32               | UNSIGNED_tok
   33               | struct_or_union_specifier
   34               | ENUM_tok
   35               | TYPEDEF_NAME_tok

   36 type_qualifier: CONST_tok
   37               | VOLATILE_tok

   38 struct_or_union_specifier: struct_or_union identifier OPEN_BRACE_tok struct_declaration_list CLOSE_BRACE_tok
   39                          | struct_or_union OPEN_BRACE_tok struct_declaration_list CLOSE_BRACE_tok
   40                          | struct_or_union identifier

   41 struct_or_union: STRUCT_tok
   42                | UNION_tok

   43 struct_declaration_list: struct_declaration
   44                        | struct_declaration_list struct_declaration

   45 init_declarator_list: init_declarator
   46                     | init_declarator_list COMMA_tok init_declarator

   47 init_declarator: declarator
   48                | declarator EQUAL_tok initializer

   49 struct_declaration: specifier_qualifier_list struct_declarator_list SEMI_tok

   50 specifier_qualifier_list: type_specifier
   51                         | type_specifier specifier_qualifier_list
   52                         | type_qualifier
   53                         | type_qualifier specifier_qualifier_list

   54 struct_declarator_list: struct_declarator
   55                       | struct_declarator_list COMMA_tok struct_declarator

   56 struct_declarator: declarator
   57                  | COLON_tok constant_expression
   58                  | declarator COLON_tok constant_expression

   59 declarator: direct_declarator
   60           | pointer direct_declarator

   61 direct_declarator: identifier
   62                  | OPEN_PAREN_tok declarator CLOSE_PAREN_tok
   63                  | direct_declarator OPEN_BRACKET_tok CLOSE_BRACKET_tok
   64                  | direct_declarator OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
   65                  | direct_declarator OPEN_PAREN_tok CLOSE_PAREN_tok
   66                  | direct_declarator OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok
   67                  | direct_declarator OPEN_PAREN_tok identifier_list CLOSE_PAREN_tok

   68 pointer: STAR_tok
   69        | STAR_tok type_qualifier_list
   70        | STAR_tok pointer
   71        | STAR_tok type_qualifier_list pointer

   72 type_qualifier_list: type_qualifier
   73                    | type_qualifier_list type_qualifier

   74 parameter_type_list: parameter_list
   75                    | parameter_list COMMA_tok ELIPSIS_tok

   76 parameter_list: parameter_declaration
   77               | parameter_list COMMA_tok parameter_declaration

   78 parameter_declaration: declaration_specifiers declarator
   79                      | declaration_specifiers
   80                      | declaration_specifiers abstract_declarator

   81 identifier_list: identifier
   82                | identifier_list COMMA_tok identifier

   83 initializer: assignment_expression
   84            | OPEN_BRACE_tok initializer_list CLOSE_BRACE_tok
   85            | OPEN_BRACE_tok initializer_list COMMA_tok CLOSE_BRACE_tok

   86 initializer_list: initializer
   87                 | initializer_list COMMA_tok initializer

   88 type_name: specifier_qualifier_list
   89          | specifier_qualifier_list abstract_declarator

   90 abstract_declarator: pointer
   91                    | direct_abstract_declarator
   92                    | pointer direct_abstract_declarator

   93 direct_abstract_declarator: OPEN_PAREN_tok abstract_declarator CLOSE_PAREN_tok
   94                           | OPEN_BRACKET_tok CLOSE_BRACKET_tok
   95                           | OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
   96                           | direct_abstract_declarator OPEN_BRACKET_tok CLOSE_BRACKET_tok
   97                           | direct_abstract_declarator OPEN_BRACKET_tok constant_expression CLOSE_BRACKET_tok
   98                           | OPEN_PAREN_tok CLOSE_PAREN_tok
   99                           | OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok
  100                           | direct_abstract_declarator OPEN_PAREN_tok CLOSE_PAREN_tok
  101                           | direct_abstract_declarator OPEN_PAREN_tok parameter_type_list CLOSE_PAREN_tok

  102 statement: labeled_statement
  103          | compound_statement
  104          | expression_statement
  105          | selection_statement
  106          | iteration_statement
  107          | jump_statement

  108 labeled_statement: identifier COLON_tok statement
  109                  | CASE_tok constant_expression COLON_tok statement
  110                  | DEFAULT_tok COLON_tok statement

  111 expression_statement: SEMI_tok
  112                     | expression SEMI_tok

  113 compound_statement: OPEN_BRACE_tok CLOSE_BRACE_tok
  114                   | OPEN_BRACE_tok statement_list CLOSE_BRACE_tok
  115                   | OPEN_BRACE_tok declaration_list CLOSE_BRACE_tok
  116                   | OPEN_BRACE_tok declaration_list statement_list CLOSE_BRACE_tok

  117 statement_list: statement
  118               | statement_list statement

  119 selection_statement: IF_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement
  120                    | IF_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement ELSE_tok statement
  121                    | SWITCH_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement

  122 iteration_statement: WHILE_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok statement
  123                    | DO_tok statement WHILE_tok OPEN_PAREN_tok expression CLOSE_PAREN_tok SEMI_tok
  124                    | FOR_tok OPEN_PAREN_tok SEMI_tok SEMI_tok CLOSE_PAREN_tok statement
  125                    | FOR_tok OPEN_PAREN_tok SEMI_tok SEMI_tok expression CLOSE_PAREN_tok statement
  126                    | FOR_tok OPEN_PAREN_tok SEMI_tok expression SEMI_tok CLOSE_PAREN_tok statement
  127                    | FOR_tok OPEN_PAREN_tok SEMI_tok expression SEMI_tok expression CLOSE_PAREN_tok statement
  128                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok SEMI_tok CLOSE_PAREN_tok statement
  129                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok SEMI_tok expression CLOSE_PAREN_tok statement
  130                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok expression SEMI_tok CLOSE_PAREN_tok statement
  131                    | FOR_tok OPEN_PAREN_tok expression SEMI_tok expression SEMI_tok expression CLOSE_PAREN_tok statement

  132 jump_statement: GOTO_tok identifier SEMI_tok
  133               | CONTINUE_tok SEMI_tok
  134               | BREAK_tok SEMI_tok
  135               | RETURN_tok SEMI_tok
  136               | RETURN_tok expression SEMI_tok

  137 expression: assignment_expression
  138           | expression COMMA_tok assignment_expression

  139 assignment_expression: conditional_expression
  140                      | unary_expression assignment_operator assignment_expression

  141 assignment_operator: EQUAL_tok
  142                    | MULT_ASSIGN_tok
  143                    | DIV_ASSIGN_tok
  144                    | MOD_ASSIGN_tok
  145                    | ADD_ASSIGN_tok
  146                    | SUB_ASSIGN_tok
  147                    | LEFT_ASSIGN_tok
  148                    | RIGHT_ASSIGN_tok
  149                    | AND_ASSIGN_tok
  150                    | XOR_ASSIGN_tok
  151                    | OR_ASSIGN_tok

  152 conditional_expression: logical_or_expression
  153                       | logical_or_expression QUESTION_MARK_tok expression COLON_tok conditional_expression

  154 constant_expression: conditional_expression

  155 logical_or_expression: logical_and_expression
  156                      | logical_or_expression OR_OP_tok logical_and_expression

  157 logical_and_expression: inclusive_or_expression
  158                       | logical_and_expression AND_OP_tok inclusive_or_expression

  159 inclusive_or_expression: exclusive_or_expression
  160                        | inclusive_or_expression BAR_tok exclusive_or_expression

  161 exclusive_or_expression: and_expression
  162                        | exclusive_or_expression CARET_tok and_expression

  163 and_expression: equality_expression
  164               | and_expression AMP_tok equality_expression

  165 equality_expression: relational_expression
  166                    | equality_expression EQ_OP_tok relational_expression
  167                    | equality_expression NE_OP_tok relational_expression

  168 relational_expression: shift_expression
  169                      | relational_expression LT_tok shift_expression
  170                      | relational_expression GT_tok shift_expression
  171                      | relational_expression LE_OP_tok shift_expression
  172                      | relational_expression GE_OP_tok shift_expression

  173 shift_expression: additive_expression
  174                 | shift_expression LEFT_OP_tok additive_expression
  175                 | shift_expression RIGHT_OP_tok additive_expression

  176 additive_expression: multiplicative_expression
  177                    | additive_expression PLUS_tok multiplicative_expression
  178                    | additive_expression MINUS_tok multiplicative_expression

  179 multiplicative_expression: cast_expression
  180                          | multiplicative_expression STAR_tok cast_expression
  181                          | multiplicative_expression DIV_tok cast_expression
  182                          | multiplicative_expression PERCENT_tok cast_expression

  183 cast_expression: unary_expression
  184                | OPEN_PAREN_tok type_name CLOSE_PAREN_tok cast_expression

  185 unary_expression: postfix_expression
  186                 | INC_OP_tok unary_expression
  187                 | DEC_OP_tok unary_expression
  188                 | unary_operator cast_expression
  189                 | SIZEOF_tok unary_expression
  190                 | SIZEOF_tok OPEN_PAREN_tok type_name CLOSE_PAREN_tok

  191 unary_operator: AMP_tok
  192               | STAR_tok
  193               | PLUS_tok
  194               | MINUS_tok
  195               | TILDA_tok
  196               | NOT_tok

  197 postfix_expression: primary_expression
  198                   | postfix_expression OPEN_BRACKET_tok expression CLOSE_BRACKET_tok
  199                   | postfix_expression OPEN_PAREN_tok CLOSE_PAREN_tok
  200                   | postfix_expression OPEN_PAREN_tok argument_expression_list CLOSE_PAREN_tok
  201                   | postfix_expression PERIOD_tok identifier
  202                   | postfix_expression PTR_OP_tok identifier
  203                   | postfix_expression INC_OP_tok
  204                   | postfix_expression DEC_OP_tok

  205 primary_expression: identifier
  206                   | constant
  207                   | string
  208                   | OPEN_PAREN_tok expression CLOSE_PAREN_tok

  209 argument_expression_list: assignment_expression
  210                         | argument_expression_list COMMA_tok assignment_expression

  211 constant: INTEGER_CONSTANT_tok
  212         | CHARACTER_CONSTANT_tok
  213         | FLOATING_CONSTANT_tok
  214         | ENUMERATION_CONSTANT_tok

  215 string: STRING_LITERAL_tok

  216 identifier: ID_tok


Terminals, with rules where they appear

$end (0) 0
error (256)
AUTO_tok (258) 19
BREAK_tok (259) 134
CASE_tok (260) 109
CHAR_tok (261) 25
CONST_tok (262) 36
CONTINUE_tok (263) 133
DEFAULT_tok (264) 110
DO_tok (265) 123
DOUBLE_tok (266) 30
ELSE_tok (267) 120
ENUM_tok (268) 34
EXTERN_tok (269) 22
FLOAT_tok (270) 29
FOR_tok (271) 124 125 126 127 128 129 130 131
GOTO_tok (272) 132
IF_tok (273) 119 120
INT_tok (274) 27
LONG_tok (275) 28
REGISTER_tok (276) 20
RETURN_tok (277) 135 136
SHORT_tok (278) 26
SIGNED_tok (279) 31
SIZEOF_tok (280) 189 190
STATIC_tok (281) 21
STRUCT_tok (282) 41
SWITCH_tok (283) 121
TYPEDEF_tok (284) 23
UNION_tok (285) 42
UNSIGNED_tok (286) 32
VOID_tok (287) 24
VOLATILE_tok (288) 37
WHILE_tok (289) 122 123
ERROR_tok (290)
ID_tok (291) 216
PLUS_tok (292) 177 193
MINUS_tok (293) 178 194
STAR_tok (294) 68 69 70 71 180 192
SEMI_tok (295) 9 10 49 111 112 123 124 125 126 127 128 129 130 131
    132 133 134 135 136
OPEN_BRACKET_tok (296) 63 64 94 95 96 97 198
CLOSE_BRACKET_tok (297) 63 64 94 95 96 97 198
EQUAL_tok (298) 48 141
COLON_tok (299) 57 58 108 109 110 153
COMMA_tok (300) 46 55 75 77 82 85 87 138 210
OPEN_PAREN_tok (301) 62 65 66 67 93 98 99 100 101 119 120 121 122 123
    124 125 126 127 128 129 130 131 184 190 199 200 208
CLOSE_PAREN_tok (302) 62 65 66 67 93 98 99 100 101 119 120 121 122
    123 124 125 126 127 128 129 130 131 184 190 199 200 208
OPEN_BRACE_tok (303) 38 39 84 85 113 114 115 116
CLOSE_BRACE_tok (304) 38 39 84 85 113 114 115 116
QUESTION_MARK_tok (305) 153
BAR_tok (306) 160
CARET_tok (307) 162
AMP_tok (308) 164 191
GT_tok (309) 170
LT_tok (310) 169
PERCENT_tok (311) 182
TILDA_tok (312) 195
NOT_tok (313) 196
INC_OP_tok (314) 186 203
DEC_OP_tok (315) 187 204
INTEGER_CONSTANT_tok (316) 211
FLOATING_CONSTANT_tok (317) 213
CHARACTER_CONSTANT_tok (318) 212
ENUMERATION_CONSTANT_tok (319) 214
STRING_LITERAL_tok (320) 215
PTR_OP_tok (321) 202
LEFT_OP_tok (322) 174
RIGHT_OP_tok (323) 175
LE_OP_tok (324) 171
GE_OP_tok (325) 172
EQ_OP_tok (326) 166
NE_OP_tok (327) 167
AND_OP_tok (328) 158
OR_OP_tok (329) 156
MULT_ASSIGN_tok (330) 142
DIV_ASSIGN_tok (331) 143
MOD_ASSIGN_tok (332) 144
ADD_ASSIGN_tok (333) 145
SUB_ASSIGN_tok (334) 146
LEFT_ASSIGN_tok (335) 147
RIGHT_ASSIGN_tok (336) 148
AND_ASSIGN_tok (337) 149
XOR_ASSIGN_tok (338) 150
OR_ASSIGN_tok (339) 151
TYPEDEF_NAME_tok (340) 35
ELIPSIS_tok (341) 75
DIV_tok (342) 181
PERIOD_tok (343) 201


Nonterminals, with rules where they appear

$accept (89)
    on left: 0
translation_unit (90)
    on left: 1 2, on right: 0 2
external_declaration (91)
    on left: 3 4, on right: 1 2
function_definition (92)
    on left: 5 6 7 8, on right: 3
declaration (93)
    on left: 9 10, on right: 4 11 12
declaration_list (94)
    on left: 11 12, on right: 6 8 12 115 116
declaration_specifiers (95)
    on left: 13 14 15 16 17 18, on right: 7 8 9 10 14 16 18 78 79 80
storage_class_specifier (96)
    on left: 19 20 21 22 23, on right: 13 14
type_specifier (97)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35, on right: 15 16 50
    51
type_qualifier (98)
    on left: 36 37, on right: 17 18 52 53 72 73
struct_or_union_specifier (99)
    on left: 38 39 40, on right: 33
struct_or_union (100)
    on left: 41 42, on right: 38 39 40
struct_declaration_list (101)
    on left: 43 44, on right: 38 39 44
init_declarator_list (102)
    on left: 45 46, on right: 10 46
init_declarator (103)
    on left: 47 48, on right: 45 46
struct_declaration (104)
    on left: 49, on right: 43 44
specifier_qualifier_list (105)
    on left: 50 51 52 53, on right: 49 51 53 88 89
struct_declarator_list (106)
    on left: 54 55, on right: 49 55
struct_declarator (107)
    on left: 56 57 58, on right: 54 55
declarator (108)
    on left: 59 60, on right: 5 6 7 8 47 48 56 58 62 78
direct_declarator (109)
    on left: 61 62 63 64 65 66 67, on right: 59 60 63 64 65 66 67
pointer (110)
    on left: 68 69 70 71, on right: 60 70 71 90 92
type_qualifier_list (111)
    on left: 72 73, on right: 69 71 73
parameter_type_list (112)
    on left: 74 75, on right: 66 99 101
parameter_list (113)
    on left: 76 77, on right: 74 75 77
parameter_declaration (114)
    on left: 78 79 80, on right: 76 77
identifier_list (115)
    on left: 81 82, on right: 67 82
initializer (116)
    on left: 83 84 85, on right: 48 86 87
initializer_list (117)
    on left: 86 87, on right: 84 85 87
type_name (118)
    on left: 88 89, on right: 184 190
abstract_declarator (119)
    on left: 90 91 92, on right: 80 89 93
direct_abstract_declarator (120)
    on left: 93 94 95 96 97 98 99 100 101, on right: 91 92 96 97 100
    101
statement (121)
    on left: 102 103 104 105 106 107, on right: 108 109 110 117 118
    119 120 121 122 123 124 125 126 127 128 129 130 131
labeled_statement (122)
    on left: 108 109 110, on right: 102
expression_statement (123)
    on left: 111 112, on right: 104
compound_statement (124)
    on left: 113 114 115 116, on right: 5 6 7 8 103
statement_list (125)
    on left: 117 118, on right: 114 116 118
selection_statement (126)
    on left: 119 120 121, on right: 105
iteration_statement (127)
    on left: 122 123 124 125 126 127 128 129 130 131, on right: 106
jump_statement (128)
    on left: 132 133 134 135 136, on right: 107
expression (129)
    on left: 137 138, on right: 112 119 120 121 122 123 125 126 127
    128 129 130 131 136 138 153 198 208
assignment_expression (130)
    on left: 139 140, on right: 83 137 138 140 209 210
assignment_operator (131)
    on left: 141 142 143 144 145 146 147 148 149 150 151, on right:
    140
conditional_expression (132)
    on left: 152 153, on right: 139 153 154
constant_expression (133)
    on left: 154, on right: 57 58 64 95 97 109
logical_or_expression (134)
    on left: 155 156, on right: 152 153 156
logical_and_expression (135)
    on left: 157 158, on right: 155 156 158
inclusive_or_expression (136)
    on left: 159 160, on right: 157 158 160
exclusive_or_expression (137)
    on left: 161 162, on right: 159 160 162
and_expression (138)
    on left: 163 164, on right: 161 162 164
equality_expression (139)
    on left: 165 166 167, on right: 163 164 166 167
relational_expression (140)
    on left: 168 169 170 171 172, on right: 165 166 167 169 170 171
    172
shift_expression (141)
    on left: 173 174 175, on right: 168 169 170 171 172 174 175
additive_expression (142)
    on left: 176 177 178, on right: 173 174 175 177 178
multiplicative_expression (143)
    on left: 179 180 181 182, on right: 176 177 178 180 181 182
cast_expression (144)
    on left: 183 184, on right: 179 180 181 182 184 188
unary_expression (145)
    on left: 185 186 187 188 189 190, on right: 140 183 186 187 189
unary_operator (146)
    on left: 191 192 193 194 195 196, on right: 188
postfix_expression (147)
    on left: 197 198 199 200 201 202 203 204, on right: 185 198 199
    200 201 202 203 204
primary_expression (148)
    on left: 205 206 207 208, on right: 197
argument_expression_list (149)
    on left: 209 210, on right: 200 210
constant (150)
    on left: 211 212 213 214, on right: 206
string (151)
    on left: 215, on right: 207
identifier (152)
    on left: 216, on right: 38 40 61 81 82 108 132 201 202 205


State 0

    0 $accept: . translation_unit $end

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    ID_tok            shift, and go to state 20
    STAR_tok          shift, and go to state 21
    OPEN_PAREN_tok    shift, and go to state 22
    TYPEDEF_NAME_tok  shift, and go to state 23

    translation_unit           go to state 24
    external_declaration       go to state 25
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    declarator                 go to state 34
    direct_declarator          go to state 35
    pointer                    go to state 36
    identifier                 go to state 37


State 1

   19 storage_class_specifier: AUTO_tok .

    $default  reduce using rule 19 (storage_class_specifier)


State 2

   25 type_specifier: CHAR_tok .

    $default  reduce using rule 25 (type_specifier)


State 3

   36 type_qualifier: CONST_tok .

    $default  reduce using rule 36 (type_qualifier)


State 4

   30 type_specifier: DOUBLE_tok .

    $default  reduce using rule 30 (type_specifier)


State 5

   34 type_specifier: ENUM_tok .

    $default  reduce using rule 34 (type_specifier)


State 6

   22 storage_class_specifier: EXTERN_tok .

    $default  reduce using rule 22 (storage_class_specifier)


State 7

   29 type_specifier: FLOAT_tok .

    $default  reduce using rule 29 (type_specifier)


State 8

   27 type_specifier: INT_tok .

    $default  reduce using rule 27 (type_specifier)


State 9

   28 type_specifier: LONG_tok .

    $default  reduce using rule 28 (type_specifier)


State 10

   20 storage_class_specifier: REGISTER_tok .

    $default  reduce using rule 20 (storage_class_specifier)


State 11

   26 type_specifier: SHORT_tok .

    $default  reduce using rule 26 (type_specifier)


State 12

   31 type_specifier: SIGNED_tok .

    $default  reduce using rule 31 (type_specifier)


State 13

   21 storage_class_specifier: STATIC_tok .

    $default  reduce using rule 21 (storage_class_specifier)


State 14

   41 struct_or_union: STRUCT_tok .

    $default  reduce using rule 41 (struct_or_union)


State 15

   23 storage_class_specifier: TYPEDEF_tok .

    $default  reduce using rule 23 (storage_class_specifier)


State 16

   42 struct_or_union: UNION_tok .

    $default  reduce using rule 42 (struct_or_union)


State 17

   32 type_specifier: UNSIGNED_tok .

    $default  reduce using rule 32 (type_specifier)


State 18

   24 type_specifier: VOID_tok .

    $default  reduce using rule 24 (type_specifier)


State 19

   37 type_qualifier: VOLATILE_tok .

    $default  reduce using rule 37 (type_qualifier)


State 20

  216 identifier: ID_tok .

    $default  reduce using rule 216 (identifier)


State 21

   68 pointer: STAR_tok .
   69        | STAR_tok . type_qualifier_list
   70        | STAR_tok . pointer
   71        | STAR_tok . type_qualifier_list pointer

    CONST_tok     shift, and go to state 3
    VOLATILE_tok  shift, and go to state 19
    STAR_tok      shift, and go to state 21

    $default  reduce using rule 68 (pointer)

    type_qualifier       go to state 38
    pointer              go to state 39
    type_qualifier_list  go to state 40


State 22

   62 direct_declarator: OPEN_PAREN_tok . declarator CLOSE_PAREN_tok

    ID_tok          shift, and go to state 20
    STAR_tok        shift, and go to state 21
    OPEN_PAREN_tok  shift, and go to state 22

    declarator         go to state 41
    direct_declarator  go to state 35
    pointer            go to state 36
    identifier         go to state 37


State 23

   35 type_specifier: TYPEDEF_NAME_tok .

    $default  reduce using rule 35 (type_specifier)


State 24

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_declaration

    $end              shift, and go to state 42
    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    ID_tok            shift, and go to state 20
    STAR_tok          shift, and go to state 21
    OPEN_PAREN_tok    shift, and go to state 22
    TYPEDEF_NAME_tok  shift, and go to state 23

    external_declaration       go to state 43
    function_definition        go to state 26
    declaration                go to state 27
    declaration_specifiers     go to state 28
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    declarator                 go to state 34
    direct_declarator          go to state 35
    pointer                    go to state 36
    identifier                 go to state 37


State 25

    1 translation_unit: external_declaration .

    $default  reduce using rule 1 (translation_unit)


State 26

    3 external_declaration: function_definition .

    $default  reduce using rule 3 (external_declaration)


State 27

    4 external_declaration: declaration .

    $default  reduce using rule 4 (external_declaration)


State 28

    7 function_definition: declaration_specifiers . declarator compound_statement
    8                    | declaration_specifiers . declarator declaration_list compound_statement
    9 declaration: declaration_specifiers . SEMI_tok
   10            | declaration_specifiers . init_declarator_list SEMI_tok

    ID_tok          shift, and go to state 20
    STAR_tok        shift, and go to state 21
    SEMI_tok        shift, and go to state 44
    OPEN_PAREN_tok  shift, and go to state 22

    init_declarator_list  go to state 45
    init_declarator       go to state 46
    declarator            go to state 47
    direct_declarator     go to state 35
    pointer               go to state 36
    identifier            go to state 37


State 29

   13 declaration_specifiers: storage_class_specifier .
   14                       | storage_class_specifier . declaration_specifiers

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    TYPEDEF_NAME_tok  shift, and go to state 23

    $default  reduce using rule 13 (declaration_specifiers)

    declaration_specifiers     go to state 48
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 30

   15 declaration_specifiers: type_specifier .
   16                       | type_specifier . declaration_specifiers

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    TYPEDEF_NAME_tok  shift, and go to state 23

    $default  reduce using rule 15 (declaration_specifiers)

    declaration_specifiers     go to state 49
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 31

   17 declaration_specifiers: type_qualifier .
   18                       | type_qualifier . declaration_specifiers

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    TYPEDEF_NAME_tok  shift, and go to state 23

    $default  reduce using rule 17 (declaration_specifiers)

    declaration_specifiers     go to state 50
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33


State 32

   33 type_specifier: struct_or_union_specifier .

    $default  reduce using rule 33 (type_specifier)


State 33

   38 struct_or_union_specifier: struct_or_union . identifier OPEN_BRACE_tok struct_declaration_list CLOSE_BRACE_tok
   39                          | struct_or_union . OPEN_BRACE_tok struct_declaration_list CLOSE_BRACE_tok
   40                          | struct_or_union . identifier

    ID_tok          shift, and go to state 20
    OPEN_BRACE_tok  shift, and go to state 51

    identifier  go to state 52


State 34

    5 function_definition: declarator . compound_statement
    6                    | declarator . declaration_list compound_statement

    AUTO_tok          shift, and go to state 1
    CHAR_tok          shift, and go to state 2
    CONST_tok         shift, and go to state 3
    DOUBLE_tok        shift, and go to state 4
    ENUM_tok          shift, and go to state 5
    EXTERN_tok        shift, and go to state 6
    FLOAT_tok         shift, and go to state 7
    INT_tok           shift, and go to state 8
    LONG_tok          shift, and go to state 9
    REGISTER_tok      shift, and go to state 10
    SHORT_tok         shift, and go to state 11
    SIGNED_tok        shift, and go to state 12
    STATIC_tok        shift, and go to state 13
    STRUCT_tok        shift, and go to state 14
    TYPEDEF_tok       shift, and go to state 15
    UNION_tok         shift, and go to state 16
    UNSIGNED_tok      shift, and go to state 17
    VOID_tok          shift, and go to state 18
    VOLATILE_tok      shift, and go to state 19
    OPEN_BRACE_tok    shift, and go to state 53
    TYPEDEF_NAME_tok  shift, and go to state 23

    declaration                go to state 54
    declaration_list           go to state 55
    declaration_specifiers     go to state 56
    storage_class_specifier    go to state 29
    type_specifier             go to state 30
    type_qualifier             go to state 31
    struct_or_union_specifier  go to state 32
    struct_or_union            go to state 33
    compound_statement         go to state 57


State 35
